// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Snackbar (toast) No Auto Hide 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root NatDSButton-root-1484 MuiButton-contained MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label NatDSButton-label-1485"
  >
    Toggle the Snackbar
  </span>
  <span
    className="MuiTouchRipple-root"
  />
</button>
`;

exports[`Storyshots Components/Snackbar (toast) Playground 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root NatDSButton-root-1482 MuiButton-contained MuiButton-containedPrimary"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label NatDSButton-label-1483"
  >
    Toggle the Snackbar
  </span>
</button>
`;
